--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python:
   - "3.7-dev"
+install:
+  - pip install factory_boy
+  - pip install faker
+  - pip install jinja2
 script:
   - python -m unittest tests/FactureTest.py
