--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: python
 python:
   - "3.7-dev"
 install:
-  - pip install factory_boy
-  - pip install faker
-  - pip install jinja2
+  - pip install -r requirements.txt
 script:
   - python -m unittest tests/FactureTest.py
